--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"server": "npx json-server --port=3000 --watch backend.json"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.0",
@@ -32,6 +33,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"axios": "^1.1.3",
 		"sass": "^1.56.0"
 	}
 }
