--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
 		"postcss": "^8.4.18",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
+		"svelte": "^3.46.0",
 		"svelte-check": "^2.7.1",
+		"svelte-dnd-action": "^0.9.21",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.2.2",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
-		"vite": "^3.1.0",
-		"svelte": "^3.46.0"
+		"vite": "^3.1.0"
 	},
 	"type": "module",
 	"dependencies": {
