--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.46.0",
+		"svelte-adapter-appengine": "^0.9.2",
 		"svelte-check": "^2.7.1",
 		"svelte-dnd-action": "^0.9.21",
 		"svelte-preprocess": "^4.10.7",
